fix: combat log and unit_info_panel shouldn't overlap fullscreen views

--- a/src/style/styles.less
+++ b/src/style/styles.less
@@ -1335,7 +1335,7 @@ div.section.info {
 	background-color: rgba(0, 0, 0, 0.55);
 	border-radius: 10px;
 	padding: 6px 12px;
-	z-index: 5;
+	z-index: 3;
 	pointer-events: none;
 
 	&:empty {
@@ -1371,7 +1371,7 @@ div.section.info {
 	border-radius: 10px;
 	overflow: hidden;
 	transition: all 500ms;
-	z-index: 4;
+	z-index: 3;
 }
 
 #chat.expanded {
